# rust-in-pieces

./: .gitignore  README.md  skaffold.yaml
.devcontainer/: devcontainer.json
helm-chart/templates/: shippingservice.yaml
kubernetes-manifests/: checkoutservice.yaml  frontend.yaml  kustomization.yaml  shippingservice-connect.yaml  shippingservice.yaml
kustomize/base/: checkoutservice.yaml  frontend.yaml  kustomization.yaml  shippingservice-connect.yaml
release/: kubernetes-manifests.yaml
src/shippingservice/: Cargo.toml  Dockerfile  build.rs
src/shippingservice-connect/: Dockerfile  main.go
src/shippingservice/src/: client.rs  main.rs
src/shippingservice_connect/: go.mod  shipping.proto
src/shippingservice_connect/server/: main.go
src/shippingservice_newgoversion/: Dockerfile  go.mod
src/shippingserwasm/: Cargo.toml  README.md  build.rs  shippingserwasm.wasm
src/shippingserwasm/lib/wasi-grpc-server/: Cargo.toml  README.md
src/shippingserwasm/lib/wasi-grpc-server/src/: lib.rs
src/shippingserwasm/src/: main.rs
