[package]
name = "shippingservice"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "shipping-server"
path = "src/main.rs"

[[bin]]
name = "shipping-client"
path = "src/client.rs"

[dependencies]
tonic = "*"
prost = "0.14"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }


async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "*"
